Using --add-modules instead of --addmods